fixed alignment of medium widget for mobile view

--- a/code/style.css
+++ b/code/style.css
@@ -386,7 +386,7 @@ li {
 /* Medium widget */
 .medium-widget-article__row {
   gap: 25px;
-  margin: 10px;
+  margin: 15px;
 }
 
 .medium-widget-article__item {
